kubernetes/system/longhorn/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.cluster.afflair.app`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: letsencrypt
